
===========================================================================
MARK: released gwenhywfar-1.10.0 (2005/03/28)

Please note: The CryptToken framework in src/crypt2/ is not considered part
of the API yet, so changes there will not change the SO version !
Please do not use the stuff from src/crypts2 until the next release.
===========================================================================


2005/03/29: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- typemaker: function for stringlists "*_Has*" now expects a const rather
  than a non-const pointer as first argument


2005/03/28: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- added option "--header" to tool xmlmerge. With this given the resulting
  file will contain some XML headers (like ?xml)


2005/03/26: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- added environment variable "GWEN_SSL_DEBUG"
- reworked parts of GWEN_NetConnectionHTTP, GWEN_NetConnection and 
  GWEN_NetTransportSSL. This should work now with more banks.


2005/03/25: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- added message digest SHA1
- simplified GWEN_Buffer functions for inserting bytes
- added functions
  - GWEN_Buffer_InsertRoom()
  - GWEN_Buffer_FillLeftWithBytes()
  - GWEN_MD_HashToBuffer()
  - GWEN_Padd_PaddWithPkcs1Bt1()
  - GWEN_Padd_UnpaddWithPkcs1Bt1()
  - GWEN_Padd_PaddWithPkcs1Bt2()
  - GWEN_Padd_UnpaddWithPkcs1Bt2()
- added GWEN_CryptToken framework (generic interface to cryptographic tokens,
  like keyfiles or chipcards)
- added much debugging to SSL code (I'm going to hunt this bug down now ;-)
- added functions to retrieve CryptToken data from XML (needed by 
  Libchipcard2)


2005/03/22: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------